// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Snapshots renders face-down card correctly 1`] = `
<img
  className="card"
  src="card_back.svg"
/>
`;

exports[`<Card /> Snapshots renders face-up card correctly 1`] = `
<img
  className="card"
  src="2D.svg"
/>
`;
